Update API endpoint and expand README documentation

--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@
     let hasUnsavedProgress = false;
     let finalScoreSubmitted = false;
 
-    const API_BASE_URL = 'http://localhost:8371/api';
+    const API_BASE_URL = 'https://rr.bbarni.hackclub.app/api';
 
     if (urlParams.has('settings')) {
         try {
