--- a/home.html
+++ b/home.html
@@ -646,7 +646,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:8371/api';
+        const API_BASE_URL = 'https://rr.bbarni.hackclub.app/api';
         
         class RockRunnerApp {
             constructor() {
