Home is renamed

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
                 urlParams.set('user', btoa(JSON.stringify(this.currentUser)));
                 urlParams.set('token', this.authToken);
                 
-                window.location.href = `home.html?${urlParams.toString()}`;
+                window.location.href = `game.html?${urlParams.toString()}`;
             }
 
             openSettings() {
